--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,4 @@
-/**
-* Template Name: Amoeba - v4.3.0
-* Template URL: https://bootstrapmade.com/free-one-page-bootstrap-template-amoeba/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
+
 
 /*--------------------------------------------------------------
 # General
@@ -11,6 +6,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #777;
+
 }
 
 a {
@@ -119,7 +115,7 @@ section {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #70b9b0;
+  background: #89CFF0;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -133,7 +129,7 @@ section {
 }
 
 .back-to-top:hover {
-  background: #8bc6bf;
+  background: #89CFF0
   color: #fff;
 }
 
@@ -150,11 +146,11 @@ section {
   transition: all 0.5s;
   z-index: 997;
   transition: all 0.5s;
-  background: #2d6760;
+  background: white;
 }
 
 #header.header-scrolled {
-  background: #1d443f;
+  background: #89CFFO;
   height: 60px;
 }
 
@@ -168,7 +164,7 @@ section {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #fff;
+  color: black;
   text-decoration: none;
   line-height: 0;
 }
@@ -212,7 +208,7 @@ section {
   padding: 10px 0 10px 30px;
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
-  color: #d2ece9;
+  color: black;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -224,7 +220,8 @@ section {
 }
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #fff;
+  
+color:#89CFF0;
 }
 
 .navbar .dropdown ul {
@@ -348,7 +345,7 @@ section {
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #70b9b0;
+  color: #89CFFO;
 }
 
 .navbar-mobile .getstarted {
@@ -401,7 +398,7 @@ section {
 
 #hero:before {
   content: "";
-  background: rgba(112, 185, 176, 0.85);
+  background: #89CFF0;
   position: absolute;
   bottom: 0;
   top: 0;
@@ -428,7 +425,7 @@ section {
   font-size: 48px;
   font-weight: 300;
   line-height: 56px;
-  color: #fff;
+  color: black ;
 }
 
 #hero h2 {
@@ -452,9 +449,9 @@ section {
 }
 
 #hero .btn-get-started:hover {
-  background: #fff;
-  color: #70b9b0;
-  border: 1px solid #70b9b0;
+  background: #89CFFO;
+  color: black;
+  border: 1px solid #89CFFO;
 }
 
 @media (min-width: 1024px) {
@@ -611,7 +608,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #70b9b0;
+  background: #89CFF0;
   color: #fff;
 }
 
@@ -623,9 +620,7 @@ section {
   background: #073839;
   overflow: hidden;
   min-height: 200px;
-  position: relative;
-  border-radius: 4px;
-  margin: 0 0 30px 0;
+  
 }
 
 .portfolio .portfolio-wrap img {
@@ -659,7 +654,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-info a i:hover {
-  color: #70b9b0;
+  color: #89CFF0;
 }
 
 .portfolio .portfolio-wrap:hover img {
@@ -758,13 +753,13 @@ section {
 .faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #70b9b0;
+  font-family: #89CFF0;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
   padding-left: 25px;
   cursor: pointer;
-  color: #51a59b;
+  color: #89CFF0;
   transition: 0.3s;
 }
 
@@ -789,7 +784,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-  color: #70b9b0;
+  color: #89CFF0;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -865,7 +860,7 @@ section {
   line-height: 1;
   font-weight: 500;
   letter-spacing: 1px;
-  color: #70b9b0;
+  color: #89CFF0;
 }
 
 .contact .contact-about p {
@@ -885,18 +880,18 @@ section {
   justify-content: center;
   font-size: 16px;
   background: #fff;
-  color: #70b9b0;
+  color: #89CFF0;
   line-height: 0;
   margin-right: 4px;
   border-radius: 50%;
   width: 36px;
   height: 36px;
   transition: 0.3s;
-  border: 1px solid #70b9b0;
+  border: 1px solid #89CFF0;
 }
 
 .contact .social-links a:hover {
-  background: #70b9b0;
+  background: #89CFF0;
   color: #fff;
 }
 
@@ -906,7 +901,7 @@ section {
 
 .contact .info i {
   font-size: 32px;
-  color: #70b9b0;
+  color: #89CFF0;
   float: left;
   line-height: 1;
 }
@@ -966,7 +961,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #70b9b0;
+  background: #89CFF0;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1011,8 +1006,9 @@ section {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+
 #footer {
-  background: #073839;
+  background: #89CFF0;
   padding: 30px 0;
   color: #fff;
   font-size: 14px;
@@ -1028,3 +1024,4 @@ section {
   font-size: 13px;
   color: #fff;
 }
+
