--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap');
 
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+ font-family: 'Arima Madurai', cursive;
   color: #777;
 }
 
@@ -18,7 +18,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6, .font-primary {
-  font-family: "Lato", sans-serif;
+  font-family: 'Arima Madurai', cursive;
 }
 
 /*--------------------------------------------------------------
