--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap');
 #header{
     padding: 15px 30px;
     display: flex;
