--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,6 +245,7 @@ section {
 --------------------------------------------------------------*/
 .faq {
   background-color: #f5f5f6;
+ font-family: 'Arima Madurai', cursive;
 }
 
 .faq .faq-list {
