--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ section {
 }
 
 .faq .faq-list li {
-  border-bottom: 1px soli #deefed;
+  border-bottom: 1px solid #deefed;
   margin-bottom: 20px;
   padding-bottom: 20px;
 }
@@ -289,7 +289,9 @@ section {
   left: 0;
   top: -2px;
 }
-
+.faq-list #faq1 p{
+font-size:18px;
+}
 .faq .faq-list p {
   margin-bottom: 0;
   padding: 10px 0 0 25px;
