--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -51,7 +51,7 @@
     font-family: 'Arima Madurai', cursive;
   }
   .main_nav ul li:hover > a{
-    color: #2b3236;
+    color: #0747f8;
   }
   .main_nav ul li i{
     position: absolute;
