--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -187,3 +187,15 @@
       display:none;
   }
 }
+@media screen and (max-width: 767px){
+    .container .row iframe {
+        width:360px;
+        height:430px;
+    }
+    
+    
+    
+    
+    
+    
+}
